# BANK-Fraud-Transactions

./: README.md  pyproject.toml
model/mlruns/0/: meta.yaml
model/mlruns/0/9823e113168746508a1871363289fc3a/: meta.yaml
model/mlruns/0/9823e113168746508a1871363289fc3a/artifacts/model_RandomForest/: MLmodel
model/mlruns/0/9823e113168746508a1871363289fc3a/metrics/: auc
model/mlruns/0/9823e113168746508a1871363289fc3a/tags/: mlflow.log-model.history  mlflow.source.name
model/mlruns/0/eca9ac810b6749b99aa6ffe45f8dff33/: meta.yaml
model/mlruns/0/eca9ac810b6749b99aa6ffe45f8dff33/artifacts/model_LogisticRegression/: MLmodel
model/mlruns/0/eca9ac810b6749b99aa6ffe45f8dff33/metrics/: auc
model/mlruns/0/eca9ac810b6749b99aa6ffe45f8dff33/tags/: mlflow.log-model.history
model/model_LogisticRegression/: MLmodel  python_env.yaml
model/model_LogisticRegression/sparkml/metadata/: .part-00000.crc  part-00000
model/model_LogisticRegression/sparkml/stages/0_LogisticRegression_05d75735d796/data/: part-00000-3656a36f-b96a-4022-b44d-eed9a29b536f-c000.snappy.parquet
model/model_LogisticRegression/sparkml/stages/0_LogisticRegression_05d75735d796/metadata/: .part-00000.crc  part-00000
model/model_RandomForest/: MLmodel  conda.yaml  requirements.txt
model/model_RandomForest/sparkml/metadata/: .part-00000.crc  part-00000
model/model_RandomForest/sparkml/stages/0_RandomForestClassifier_f14084867d1f/metadata/: .part-00000.crc  (+1 more)
notebook/: demo.ipynb
py/: DataExplorer.py  DataIngestor.py  DataSplitter.py  DataTransformer.py  ModelEvaluator.py  ModelTrainer.py  app.py  main.py
(+12 files in other folders)
