[tool.poetry]
name = "fraudtransactionsdetection"
version = "0.1.0"
description = ""
authors = ["adrianinfantes <infantesromeroadrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
pandas = "^2.2.0"
numpy = "^1.21.2"
matplotlip = "^0.2"
seaborn = "^0.13.1"
scikit-learn = "^1.4.0"
mlflow = "^2.9.2"
joblib = "^1.3.2"
jupyter = "^1.0.0"
jupyterlab = "^4.0.11"
pyspark = "^3.5.0"
streamlit = "^1.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
